--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -13,6 +13,7 @@
    * ======================================================================== */
 
   --font-family-base: 'Pangolin', cursive;
+  /*--font-family-base: 'Shadows Into Light', cursive;*/
 
   /*
    * Layout
