--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,10 +15,10 @@
 
 .laserCat {
   background-image: url('../../../public/laser_cat.png');
-  background-size: 74px 60px;
+  background-size: 80px 64px;
   display: inline-block;
-  width: 74px;
-  height: 60px;
+  width: 80px;
+  height: 64px;
   margin-bottom: 8px;
   vertical-align: bottom;
 }
@@ -33,6 +33,6 @@
 
 .text {
   font-size: 45px;
-  text-shadow: 0 0 3px #000;
+  text-shadow: 2px 2px 3px #000;
   padding: 2px 5px;
 }
